--- a/apps/ux-films-finder/src/app/components/details/details.component.less
+++ b/apps/ux-films-finder/src/app/components/details/details.component.less
@@ -1,10 +1,14 @@
 @import '../../../assets/styles/themes/base/common/shared';
 .film-details {
   display: flex;
-  flex-direction: row;
-  margin: 16px;
-  line-height: 40px;
-  text-align: start;
+  flex-direction: column;
+  &__main-info {
+    display: flex;
+    flex-direction: row;
+    margin: 16px;
+    line-height: 40px;
+    text-align: start;
+  }
   &__img {
     width: 450px;
     height: 600px;
