--- a/apps/ux-films-finder/src/app/components/card/card.component.html
+++ b/apps/ux-films-finder/src/app/components/card/card.component.html
@@ -1,5 +1,5 @@
 <div class="card">
   <img class="card__img" [src]="url" />
-  <div class="card__name">{{ name }}</div>
-  <div class="card__rating">{{ rating }}</div>
+  <div *ngIf="name" class="card__name">{{ name }}</div>
+  <div *ngIf="rating" class="card__rating">{{ rating }}</div>
 </div>
