--- a/apps/ux-films-finder/src/app/components/card/card.component.less
+++ b/apps/ux-films-finder/src/app/components/card/card.component.less
@@ -2,30 +2,26 @@
 
 .card {
   position: relative;
-  line-height: 20px;
-  font-size: 21px;
   background-color: @color-black-00;
-  box-shadow: 0 5px 5px @color-gray-66, 1px -1px 8px @color-gray-66;
+  box-shadow: 0 5px 5px rgba(0, 0, 0, 0.25), 1px -1px 8px rgba(0, 0, 0, 0.25);
   width: 360px;
   height: 450px;
   border-radius: 10px;
+  overflow: hidden;
+  display: flex;
+  justify-content: center;
   &__img {
-    display: flex;
-    position: absolute;
     width: 314px;
     height: 450px;
-    left: 21px;
-    top: 0;
   }
   &__name {
     display: flex;
     position: absolute;
-    bottom: 25px;
-    text-align: center;
+    bottom: 24px;
+    line-height: 36px;
+    font-size: 24px;
     width: 360px;
-    height: 60px;
     left: 0;
-    top: 374px;
     padding-top: 12px;
     padding-bottom: 12px;
     padding-left: 24px;
@@ -37,15 +33,17 @@
   &__rating {
     display: flex;
     align-items: center;
+    justify-content: center;
     position: absolute;
+    font-size: 24px;
     width: 84px;
     height: 49px;
     left: 277px;
     top: 0;
     bottom: 85%;
-    padding: 24px;
+    border-radius: 0 0 0 16px;
+    right: 0;
     color: @color-black-00;
-    border-radius: 4px 0 0 4px;
     background-color: @color-white-ff;
   }
 }
@@ -53,12 +51,31 @@
 .theme-dark {
   .card {
     &__rating {
-      background-color: @color-black-00;
+      background-color: #1b1b1b;
       color: @color-white-ff;
     }
     &__name {
-      background-color: @color-black-00;
+      background-color: #1b1b1b;
       color: @color-white-ff;
+    }
+  }
+}
+
+@media only screen and (max-width: 480px) {
+  .card {
+    width: 214px;
+    height: 270px;
+    &__img {
+      width: 214px;
+      height: 270px;
+    }
+    &__name {
+      width: 214px;
+      bottom: 24px;
+      padding-top: 6px;
+      padding-bottom: 6px;
+      padding-left: 12px;
+      padding-right: 12px;
     }
   }
 }
