--- a/apps/ux-films-finder/src/app/components/category/category.component.less
+++ b/apps/ux-films-finder/src/app/components/category/category.component.less
@@ -15,3 +15,12 @@
     color: @color-white-ff;
   }
 }
+@media only screen and (max-width: 480px) {
+  .category {
+    &__card {
+      display: grid;
+      grid-template-columns: 1fr;
+      grid-gap: 25px;
+    }
+  }
+}
