film gallery component

--- a/apps/ux-films-finder/src/app/components/screen-gallery/screen-gallery.component.html
+++ b/apps/ux-films-finder/src/app/components/screen-gallery/screen-gallery.component.html
@@ -1,8 +1,13 @@
-<div class="screen-gallery keen-slider" #sliderRef>
+<div
+  class="screen-gallery keen-slider"
+  #sliderRef
+  *ngIf="(filmImages$ | async)?.total"
+>
+  <div class="screen-gallery__stripe"></div>
   <div
     class="screen-gallery__slide keen-slider__slide"
     *ngFor="let img of (filmImages$ | async)?.items"
   >
-    <img src="{{ img.imageUrl }}" />
+    <img class="screen-gallery__image" src="{{ img.imageUrl }}" />
   </div>
 </div>
