--- a/apps/ux-films-finder/src/app/components/screen-gallery/screen-gallery.component.less
+++ b/apps/ux-films-finder/src/app/components/screen-gallery/screen-gallery.component.less
@@ -1,11 +1,36 @@
 @import (inline) 'keen-slider/keen-slider.min.css';
+@import '../../../assets/styles/themes/dark/common/shared';
 .screen-gallery {
-  display: flex;
-  justify-content: center;
-  justify-self: center;
+  background-color: @color-gray-42;
+  padding: 24px 0;
+  margin: 38px 0 104px 0;
   &__slide {
     width: 680px;
     height: 429px;
-    margin: 24px 32px;
+  }
+  &__image {
+    width: 100%;
+    height: 100%;
+  }
+  &__stripe {
+    position: absolute;
+    width: 100%;
+    height: 476px;
+    left: 1px;
+    top: 1px;
+    display: flex;
+    flex-direction: row;
+    justify-content: space-between;
+    z-index: 1;
+    &:before,
+    &:after {
+      content: '';
+      width: 80px;
+      height: 476px;
+      background: url('../../../assets/images/blackout.svg');
+    }
+    &:after {
+      transform: rotate(0.5turn);
+    }
   }
 }
