--- a/apps/ux-films-finder/src/app/components/screen-gallery/screen-gallery.component.less
+++ b/apps/ux-films-finder/src/app/components/screen-gallery/screen-gallery.component.less
@@ -1,9 +1,11 @@
 @import (inline) 'keen-slider/keen-slider.min.css';
 @import '../../../assets/styles/themes/dark/common/shared';
 .screen-gallery {
-  background-color: @color-gray-42;
-  padding: 24px 0;
-  margin: 38px 0 104px 0;
+  &__slider {
+    background-color: @color-gray-42;
+    padding: 24px 0;
+    margin: 38px 0 104px 0;
+  }
   &__slide {
     width: 680px;
     height: 429px;
