--- a/apps/ux-films-finder/src/app/components/banner/film-banner.component.html
+++ b/apps/ux-films-finder/src/app/components/banner/film-banner.component.html
@@ -55,13 +55,9 @@
       />
     </svg>
     <svg
-      *ngIf="slider"
-      [ngClass]="
-        'arrow arrow--right ' +
-        (slider.track.details.slides.length - 1 === currentSlide
-          ? 'arrow--disabled'
-          : '')
-      "
+      *ngIf="(films$ | async)?.length as size"
+      class="arrow arrow--right"
+      [ngClass]="size - 1 === currentSlide ? 'arrow--disabled' : ''"
       (click)="slider.next()"
       xmlns="http://www.w3.org/2000/svg"
       viewBox="0 0 24 24"
