--- a/apps/ux-films-finder/src/app/components/person/person.component.less
+++ b/apps/ux-films-finder/src/app/components/person/person.component.less
@@ -105,7 +105,7 @@
   &__gender-and-name {
     display: flex;
     flex-direction: row-reverse;
-    justify-content: start;
+    justify-content: flex-start;
     margin-top: 88px;
   }
   &__name-en {
@@ -194,14 +194,14 @@
   &__rating-name {
     display: flex;
     flex-direction: row;
-    justify-content: start;
+    justify-content: flex-start;
     margin-right: 32px;
     margin-top: 8px;
   }
   &__icon-and-name {
     display: flex;
     flex-direction: row;
-    justify-content: start;
+    justify-content: flex-start;
     margin-right: 16px;
   }
   a:hover,
