--- a/apps/ux-films-finder/src/assets/styles/themes/base/common/colors.less
+++ b/apps/ux-films-finder/src/assets/styles/themes/base/common/colors.less
@@ -6,6 +6,8 @@
 
 @color-blue-27: #274879;
 
-@color-pink-cb:  #CB4A78;
+@color-pink-cb: #cb4a78;
 
 @color-green-69: #69f0ae;
+
+@color-gray-1b: #1b1b1b;
