fixed film gallery component

--- a/apps/ux-films-finder/src/app/components/screen-gallery/screen-gallery.component.less
+++ b/apps/ux-films-finder/src/app/components/screen-gallery/screen-gallery.component.less
@@ -20,8 +20,6 @@
     position: absolute;
     width: 100%;
     height: 476px;
-    left: 1px;
-    top: 1px;
     display: flex;
     flex-direction: row;
     justify-content: space-between;
@@ -31,7 +29,7 @@
       content: '';
       width: 80px;
       height: 476px;
-      background: url('../../../assets/images/blackout.svg');
+      background: linear-gradient(90deg, @color-black-00, @color-white-ff);
     }
     &:after {
       transform: rotate(0.5turn);
