--- a/apps/ux-films-finder/src/assets/styles/themes/dark/common/colors.less
+++ b/apps/ux-films-finder/src/assets/styles/themes/dark/common/colors.less
@@ -10,7 +10,7 @@
 
 @color-gray-0E: #E0E1E3;
 
-@color-white-ff: #ffffff;
+@color-white-ff: rgba(255, 255, 255, 0.04);
 
 @color-green-69: #69f0ae;
 
