--- a/apps/ux-films-finder/src/app/components/header/header.component.html
+++ b/apps/ux-films-finder/src/app/components/header/header.component.html
@@ -12,7 +12,7 @@
         <hr class="header__second-line" />
         <hr class="header__third-line" />
       </div>
-      <div class="header__navigation">
+      <mat-nav-list class="header__navigation">
         <a class="header__link" mat-flat-button routerLink="/news">НОВОСТИ</a>
         <a class="header__link" mat-flat-button routerLink="/show">ТОК-ШОУ</a>
         <a class="header__link" mat-flat-button routerLink="/for-children"
@@ -21,7 +21,7 @@
         <a class="header__link" mat-flat-button routerLink="/cartoon">
           МУЛЬТФИЛЬМЫ
         </a>
-      </div>
+      </mat-nav-list>
     </div>
     <div class="header__right-side">
       <ff-switcher *ngIf="!isShown" class="header__switcher"></ff-switcher>
