--- a/apps/ux-films-finder/src/app/components/screen-gallery/screen-gallery.component.html
+++ b/apps/ux-films-finder/src/app/components/screen-gallery/screen-gallery.component.html
@@ -13,9 +13,10 @@
     >
       <img
         class="screen-gallery__image"
-        (click)="openDialog()"
+        (click)="openDialog(img.imageUrl)"
         src="{{ img.imageUrl }}"
         alt="image"
+        #image
       />
     </div>
   </div>
