--- a/apps/ux-films-finder/src/app/components/screen-gallery/screen-gallery.component.less
+++ b/apps/ux-films-finder/src/app/components/screen-gallery/screen-gallery.component.less
@@ -24,6 +24,7 @@
     flex-direction: row;
     justify-content: space-between;
     z-index: 1;
+    pointer-events: none;
     &:before,
     &:after {
       content: '';
