--- a/apps/ux-films-finder/src/app/components/banner/film-banner.component.less
+++ b/apps/ux-films-finder/src/app/components/banner/film-banner.component.less
@@ -23,6 +23,7 @@
 
   &__name {
     padding-left: 100px;
+    width: 45%;
   }
 
   &__name-ru {
@@ -40,6 +41,9 @@
     margin-bottom: 36px;
     color: rgb(167, 167, 167);
     font-size: 19px;
+  }
+  &__genre {
+    display: flex;
   }
   &__poster {
     height: 496px;
@@ -70,10 +74,10 @@
         grid-area: 2 / 1 / 3 / 2;
       }
       &._country {
-        grid-area: 3 / 1 / 4 / 2;
+        grid-area: 4 / 1 / 5 / 2;
       }
       &._year {
-        grid-area: 4 / 1 / 5 / 2;
+        grid-area: 3 / 1 / 4 / 2;
       }
     }
     &-value {
@@ -98,10 +102,12 @@
         grid-area: 2 / 2 / 3 / 3;
       }
       &._country {
-        grid-area: 3 / 2 / 4 / 3;
+        word-spacing: 0px;
+        text-indent: 60px;
+        grid-area: 4 / 2 / 5 / 3;
       }
       &._year {
-        grid-area: 4 / 2 / 5 / 3;
+        grid-area: 3 / 2 / 4 / 3;
       }
     }
   }
@@ -142,49 +148,51 @@
 
   @media screen and (max-width: 800px) {
     flex-direction: column;
-    padding: 24px 48px;
-    height: 1000px;
+
     &__name {
       flex-grow: 1;
+      width: 90%;
     }
 
     &__name-ru {
-      margin-bottom: 20px;
-      margin-top: 35px;
-      font-size: 28px;
+      width: 90%;
+      margin-bottom: 10px;
+      margin-top: 5px;
+      font-size: 26px;
     }
 
     &__name-en {
-      font-size: 16px;
-      margin-bottom: 26px;
-    }
-    &__genres {
-      width: 300px;
-      grid-template-columns: 1fr 1fr 1fr 1fr;
+      font-size: 14px;
+      margin-bottom: 12px;
     }
     &__genre {
-      padding: 2px 10px;
-      margin: 0.5px 10px 10px 0.5px;
-      font-size: 13px;
+      display: flex;
     }
 
     &__poster {
       margin: 0 auto 0 auto;
-      height: 380px;
+      height: 320px;
 
       &._posterUrl img {
-        margin-top: 20px;
+        margin-top: 5px;
       }
     }
     &__description {
       margin: 0 auto 0 auto;
-      grid-template-rows: 40px 40px 40px 40px;
+      grid-template-rows: 32px 32px 32px 32px;
 
       &-title {
-        font-size: 16px;
+        font-size: 15px;
       }
       &-value {
-        font-size: 17px;
+        font-size: 16px;
+        &._rating {
+          width: 45px;
+          height: 30px;
+        }
+        &._icon {
+          margin-left: 120px;
+        }
       }
     }
   }
