--- a/apps/ux-films-finder/src/app/components/genre-label/genre-label.component.html
+++ b/apps/ux-films-finder/src/app/components/genre-label/genre-label.component.html
@@ -1,5 +1,1 @@
-<div class="genres">
-  <ng-container>
-    <div class="genres__genre" [ngClass]="color[genres]">{{ genres }}</div>
-  </ng-container>
-</div>
+<div class="genre-label" [ngClass]="color[genres]">{{ genres }}</div>
