--- a/apps/ux-films-finder/src/app/components/genre-label/genre-label.component.less
+++ b/apps/ux-films-finder/src/app/components/genre-label/genre-label.component.less
@@ -88,7 +88,14 @@
 @media screen and (max-width: 800px) {
   .genre-label {
     font-size: 14px;
-    padding: 2px 15px;
+    padding: 2px 8px;
     margin: 2px 6px 6px 2px;
+  }
+}
+@media screen and (max-width: 420px) {
+  .genre-label {
+    font-size: 12px;
+    padding: 2px 8px;
+    margin: 2px 6px 3px 2px;
   }
 }
