--- a/apps/ux-films-finder/src/app/components/screen-gallery/screen-gallery.component.html
+++ b/apps/ux-films-finder/src/app/components/screen-gallery/screen-gallery.component.html
@@ -19,5 +19,32 @@
         #image
       />
     </div>
+    <!--    <svg-->
+    <!--      *ngIf="!!enlargeImage"-->
+    <!--      [ngClass]="-->
+    <!--        'arrow arrow&#45;&#45;left ' + (currentSlide === 0 ? 'arrow&#45;&#45;disabled' : '')-->
+    <!--      "-->
+    <!--      (click)="slider.prev()"-->
+    <!--      xmlns="http://www.w3.org/2000/svg"-->
+    <!--      viewBox="0 0 24 24"-->
+    <!--    >-->
+    <!--      <path-->
+    <!--        d="M16.67 0l2.83 2.829-9.339 9.175 9.339 9.167-2.83 2.829-12.17-11.996z"-->
+    <!--      />-->
+    <!--    </svg>-->
+    <!--    <svg-->
+    <!--      *ngIf="slider && !!enlargeImage"-->
+    <!--      [ngClass]="-->
+    <!--        'arrow arrow&#45;&#45;right ' +-->
+    <!--        (slider.track.details.slides.length - 1 === currentSlide-->
+    <!--          ? 'arrow&#45;&#45;disabled'-->
+    <!--          : '')-->
+    <!--      "-->
+    <!--      (click)="slider.next()"-->
+    <!--      xmlns="http://www.w3.org/2000/svg"-->
+    <!--      viewBox="0 0 24 24"-->
+    <!--    >-->
+    <!--      <path d="M5 3l3.057-3 11.943 12-11.943 12-3.057-3 9-9z" />-->
+    <!--    </svg>-->
   </div>
 </div>
