--- a/apps/ux-films-finder/src/app/components/genre-label/genre-label.component.less
+++ b/apps/ux-films-finder/src/app/components/genre-label/genre-label.component.less
@@ -2,7 +2,6 @@
 @import '../../../assets/styles/themes/base/common/shared';
 
 .genre-label {
-  margin-right: 219px;
   padding: 4px 32px;
   margin: 1px 24px 24px 1px;
   border-radius: 17px;
@@ -83,6 +82,45 @@
   }
   &._western {
     background-color: @color-western;
+  }
+  &._music {
+    background-color: @color-music;
+  }
+  &._musical {
+    background-color: @color-musical;
+  }
+  &._sport {
+    background-color: @color-sport;
+  }
+  &._documentary {
+    background-color: @color-documentary;
+  }
+  &._short-film {
+    background-color: @color-short-film;
+  }
+  &._news {
+    background-color: @color-news;
+  }
+  &._concert {
+    background-color: @color-concert;
+  }
+  &._for-adults {
+    background-color: @color-for-adults;
+  }
+  &._ceremony {
+    background-color: @color-ceremony;
+  }
+  &._real-tv {
+    background-color: @color-real-tv;
+  }
+  &._game {
+    background-color: @color-game;
+  }
+  &._talk-show {
+    background-color: @color-talk-show;
+  }
+  &._baby {
+    background-color: @color-baby;
   }
 }
 @media screen and (max-width: 800px) {
