--- a/apps/ux-films-finder/src/app/components/banner/film-banner.component.less
+++ b/apps/ux-films-finder/src/app/components/banner/film-banner.component.less
@@ -49,7 +49,7 @@
     height: 496px;
     display: flex;
 
-    &._posterUrl img {
+    &._image img {
       margin-top: 25px;
       height: 90%;
     }
@@ -80,7 +80,7 @@
         grid-area: 3 / 1 / 4 / 2;
       }
     }
-    &-value {
+    &-info {
       font-size: 18px;
       text-align: right;
       color: white;
@@ -173,7 +173,7 @@
       margin: 0 auto 0 auto;
       height: 320px;
 
-      &._posterUrl img {
+      &._image img {
         margin-top: 5px;
       }
     }
@@ -184,7 +184,7 @@
       &-title {
         font-size: 15px;
       }
-      &-value {
+      &-info {
         font-size: 16px;
         &._rating {
           width: 45px;
