--- a/apps/ux-films-finder/src/assets/styles/themes/base/common/colors.less
+++ b/apps/ux-films-finder/src/assets/styles/themes/base/common/colors.less
@@ -22,3 +22,16 @@
 @color-detective: #a43370;
 @color-fiction: #6b5858;
 @color-western: #30353a;
+@color-music: #a7e43d;
+@color-musical: #571610;
+@color-sport: #65de74;
+@color-documentary: #163200;
+@color-short-film: #67acb3;
+@color-news: #a9aba5;
+@color-concert: #e0d336;
+@color-for-adults: #b193be;
+@color-ceremony: #7b633c;
+@color-real-tv: #c4df80;
+@color-game: #4251fd;
+@color-talk-show: #d6ab8c;
+@color-baby: #78e6c7;
