--- a/apps/ux-films-finder/src/app/components/details/details.component.html
+++ b/apps/ux-films-finder/src/app/components/details/details.component.html
@@ -87,6 +87,6 @@
         </div>
       </div>
     </div>
-    <ff-screen-gallery [filmId]="filmInfo.kinopoiskId"> </ff-screen-gallery>
   </ng-container>
 </div>
+<ff-video></ff-video>
