--- a/apps/ux-films-finder/src/app/components/header/header.component.less
+++ b/apps/ux-films-finder/src/app/components/header/header.component.less
@@ -96,24 +96,30 @@
 @media only screen and (max-width: 2630px) {
   .header {
     display: flex;
+
     &__right-side {
       justify-content: flex-end;
       width: 1473px;
     }
+
     &__left-side {
       width: 1073px;
     }
-  &__search-content {
-    border: solid 1px;
-    border-radius: 5px;
+
+    &__search-content {
+      border: solid 1px;
+      border-radius: 5px;
+    }
   }
 }
 @media only screen and (max-width: 1610px) {
   .header {
     display: flex;
+
     &__left-side {
       width: 800px;
     }
+
     &__navigation {
       margin-left: 15px;
     }
@@ -124,12 +130,15 @@
     &__right-side {
       width: 650px;
     }
+
     &__search-content {
       width: 400px;
     }
+
     &__search {
       width: 410px;
     }
+
     &__user-info {
       width: 50px;
     }
@@ -141,9 +150,11 @@
     position: sticky;
     z-index: 1;
     top: 0px;
+
     &__right-side {
       margin-right: 10px;
     }
+
     &__left-side {
       justify-content: flex-start;
     }
@@ -194,6 +205,7 @@
     &__search {
       width: 35px;
     }
+
     &__search-icon-hidden.mat-icon {
       width: 25px;
       display: block;
@@ -220,6 +232,7 @@
     &__search-content {
       width: 300px;
     }
+
     &__input {
       width: 250px;
     }
@@ -230,9 +243,11 @@
     &__search-content {
       width: 220px;
     }
+
     &__switcher {
       display: none;
     }
+
     &__input {
       width: 190px;
     }
@@ -243,15 +258,19 @@
     &__left-side {
       width: 25%;
     }
+
     &__logo {
       margin-left: 8px;
     }
+
     &__right-side {
       width: 75%;
     }
+
     &__search-content {
       width: 200px;
     }
+
     &__input {
       width: 80px;
     }
@@ -262,12 +281,12 @@
     &__search-content {
       width: 170px;
     }
+
     &__search {
       margin-right: 5px;
     }
   }
 }
-
 .theme-dark {
   & .header {
     background: @color-gray-1b;
@@ -276,6 +295,7 @@
   & a {
     color: @color-green-69;
   }
+
   & hr {
     border-color: #69f0ae;
   }
